<resources>
    <string name="app_name">Cờ Tướng</string>
    <string name="button_hai_nguoi">Đánh hai người</string>
    <string name="button_voi_may">Đánh với máy</string>
    <string name="button_xep_hang">Đánh xếp hạng</string>
    <string name="button_thoat">Thoát</string>
    <string name="quan_xe_do">俥</string>
    <string name="quan_ma_do">傌</string>
    <string name="quan_tuong_do">相</string>
    <string name="quan_si_do">仕</string>
    <string name="quan_soai_do">帥</string>
    <string name="quan_phao_do">炮</string>
    <string name="quan_tot_do">兵</string>

    <string name="quan_xe_den">車</string>
    <string name="quan_ma_den">馬</string>
    <string name="quan_tuong_den">象</string>
    <string name="quan_si_den">士</string>
    <string name="quan_soai_den">將</string>
    <string name="quan_phao_den">砲</string>
    <string name="quan_tot_den">卒</string>

</resources>
