<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center_horizontal"
    android:background="@drawable/background"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="150dp"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"/>
    <Button
        android:id="@+id/btnVoiMay"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:text="@string/button_voi_may"
        style="@style/Widget.AppCompat.Button.Colored"
        android:theme="@style/AppTheme.Button"
        />
    <Button
        android:id="@+id/btnHaiNguoi"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:text="@string/button_hai_nguoi"
        android:onClick="batDauChoiCheDoHaiNguoi"
        style="@style/Widget.AppCompat.Button.Colored"
        android:theme="@style/AppTheme.Button"
        />
    <Button
        android:id="@+id/btnXepHang"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:text="@string/button_xep_hang"
        style="@style/Widget.AppCompat.Button.Colored"
        android:theme="@style/AppTheme.Button"
        />
    <Button
        android:id="@+id/btnThoat"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:text="@string/button_thoat"
        style="@style/Widget.AppCompat.Button.Colored"
        android:theme="@style/AppTheme.Button"
        />
</LinearLayout>